2003-04-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.man: Changed name to tcllib_list.man to prevent a clash
	  with tcl's manpages.

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* struct.tcl:
	* list.man:
	* matrix.man:
	* pool.man:
	* queue.man:
	* record.man:
	* stack.man:
	* tree.man:
	* pkgIndex.tcl:  Set version of the package to 1.3.

2003-04-09  Andreas Kupries  <andreask@activestate.com>

	* list.man:
	* list.test:
	* list.tcl: Added 'lcsInvertMerge'.

2003-04-08  Andreas Kupries  <andreask@activestate.com>

	* list.man:
	* list.test:
	* list.tcl: Added and documented commands [iota], [equal], and
	  [repeat]. Extended the testsuite.

2003-04-02  Andreas Kupries  <andreask@activestate.com>

	* list.cl:
	* list.test: Fixed SF tcllib bug #714209.

	* ../../../examples/struct: Added example applications for usage
	  of longestCommonSubsequence and lcsInvert.

	* struct.tcl: Integrated new list commands.

	* list.tcl:  Added commands 'reverse', 'assign', 'flatten',
	* list.man:  'map', and 'fold' to the suite of list functions.
	* list.test: 

2003-04-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* list.man:  New files, extended list manipulation
	* list.tcl:  facilities. Started out with Kevin Kenny's
	* list.test: implementation of the algorithm to find the longest
	             common subsequence of two sequences, aka lists.
		     Added myself a method to invert a LCS into a
		     description of differences instead.

2003-04-01  Andreas Kupries  <andreask@activestate.com>

	* record.test: Applied changes provided by Brett Schwarz
	  <schwarzkopf@users.sourceforge.net>. His comments: I had changed
	  the return when encountering a circular record; previously I
	  returned "", but now I return an error. This fixes record.test
	  to reflect the change. Part of fix for Tcllib SF Bug #709375.

	  Additional changes by myself: Reformatted (proper tcl